--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,19 +3,6 @@
     "configurations": [
         
         {
-            "name": "Launch localhost",
-            "type": "chrome",
-            "request": "launch",
-            "url": "http://localhost/mypage.html",
-            "webRoot": "${workspaceFolder}/wwwroot"
-        },
-        {
-            "name": "Launch index.html",
-            "type": "chrome",
-            "request": "launch",
-            "file": "${workspaceFolder}/index.html"
-        },
-        {
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
@@ -26,7 +13,7 @@
             "type": "pwa-node",
             "name": "Run Current File",
             "request": "launch",
-            "program": "${workspaceFolder}\\fdcp-3-making_websites_interactive\\fdcp-3b-intro-to-javascript\\index_6_object.js"
+            "program": "${workspaceFolder}\\fdcp-3-making_websites_interactive\\fdcp-3b-intro-to-javascript\\index_7_conditionals.js"
         }
     ]
 }
